# PyQt6-stubs

./: README.md  fetch_upstream.py  fix.py  generate_upstream.py  pyproject.toml  ruff.toml  version.py
.github/workflows/: fetch_and_release.yml  generate_and_release.yml  pypi.yml
PyQt6-stubs/: QtCore.pyi  QtGui.pyi  QtWidgets.pyi
