[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "PyQt6-stubs-collection"
version = "20250728"
description = "Collections of stubs for the PyQt6 framework and its extensions."
authors = [
    { name = "Blackteahamburger", email = "blackteahamburger@outlook.com" },
]
maintainers = [
    { name = "Blackteahamburger", email = "blackteahamburger@outlook.com" },
]
license = "GPL-3.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Typing :: Stubs Only",
]

[tool.setuptools]
packages = ["PyQt6-stubs-collection"]
zip-safe = false
